--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 :root {
     --color-fondo: #FFCF9C;
     --color-texto: #000000;
@@ -10,8 +15,29 @@ body {
     background-color: var(--color-fondo);
     color: var(--color-texto);
     font-family: 'Roboto', sans-serif;
+    width: 100%;
+    height: 100vh;
+    box-sizing: border-box;
 }
 
+.header {
+    padding: 2% 0% 0% 2%;
+}
+
+.contenido {
+    width: 100%;
+    padding: 5% 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.contenido__instruccion {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
 @media (max-width: 1200px) {
 
 }
