--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     --color-borde: #000000;
     --color-boton-encriptar: #0A3871;
     --color-boton-desencriptar: #D8DFE8;
+    --color-texto-2: #FFFFFF;
 }
 
 body {
@@ -37,6 +38,40 @@ body {
     display: flex;
     flex-direction: column;
     gap: 40px;
+}
+
+.contenido__botones {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    justify-content: center;
+}
+
+.contenido__input {
+    width: 100%;
+    height: 692px;
+    border-radius: 24px;
+    padding: 0px 20px;
+    font-size: 16px;
+    border: none;
+    box-shadow: 5px;
+}
+.boton__encriptar {
+    background-color: var(--color-boton-encriptar);
+    color: var(--color-texto-2);
+    border-radius: 24px;
+    width: 328px;
+    height: 48px;
+    border: none;
+}
+
+.boton__desencriptar {
+    background: var(--color-boton-desencriptar);
+    color: var(--color-boton-encriptar);
+    border-radius: 24px;
+    width: 328px;
+    height: 48px;
+    border: solid 1px var(--color-boton-encriptar)
 }
 @media (max-width: 1200px) {
 
