--- a/style.css
+++ b/style.css
@@ -83,17 +83,41 @@ body {
 }
 
 .contenido__resultado {
-    width: 400px;
-    height: 944px;
+    background-color: white;
+    border-radius: 24px;
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+    padding: 32px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
     align-items: center;
-    background: var(--color-texto-2);
-    border-radius: 32px;
-    border: solid 1px var(--color-borde);
     justify-content: center;
 }
+
+#texto-encriptado {
+    width: 100%;
+    height: 200px;
+    border: none;
+    resize: none;
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 16px;
+}
+
+#copiar {
+    background-color: #0A3871;
+    color: white;
+    border: none;
+    border-radius: 24px;
+    padding: 12px 24px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+#copiar:hover {
+    background-color: #072B61;
+}
+
+
 @media (max-width: 1200px) {
 
 }
