--- a/style.css
+++ b/style.css
@@ -143,5 +143,36 @@ body {
     line-height: 2.0;
 }
 @media (max-width: 1200px) {
+    .header {
+        padding: 5% 0% 0% 2%;
+    }
 
+    .contenido {
+        flex-direction: column;
+        padding: 5%;
+    }
+    
+    .contenido__instruccion {
+        width: 80%;
+    }
+
+    .contenido__resultado {
+        height: auto;
+        width: 100%;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        img {
+            display: none;
+        }
+    }
+
+    #texto-encriptado {
+        height: auto;
+        gap: 10px;
+    }
+
+    #copiar {
+        margin-bottom: 20px;
+    }
+
+    
 }
