--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body {
     border: solid 1px var(--color-borde);
     justify-content: center;
     text-align: center;
-    line-height: 2.0;
+    line-height: 1.0;
 }
 
 .contenido__resultado__parrafo {
@@ -154,6 +154,12 @@ body {
     font-family: var(--fuente-texto);
     font-weight: bold;
     font-size: 24px;
+}
+
+.contenido__resultado__mensaje {
+    color: var(--color-secundario-texto);
+    font-family: var(--fuente-texto);
+    font-size: 16px;
 }
 @media (max-width: 1200px) {
     .header {
